Mon Jan  7 2002  Vitezslav Samel <samel@mail.cz>
	* acinclude.m4, configure.ac, tty.c, umath.c, ushell.c, utils.c,
	utils.h:
	cleanup signals handling (sigaction() / sigvec() / signal())

Sun Jan  6 2002  Vitezslav Samel <samel@mail.cz>
	* cmd.c:
	correct "negated macro" for nbuf/pbuf macros

Fri Dec 14 2001  Vitezslav Samel <samel@mail.cz>
	*** Release joe-2.9.8-pre1 ***

Fri Dec 14 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, NEWS:
	prepare for -pre release; bump up version to 2.9.8-pre1

Fri Dec 14 2001  Vitezslav Samel <samel@mail.cz>
	* Makefile.am:
	add types.h into distribution package

Wed Dec 12 2001  Vitezslav Samel <samel@mail.cz>
	* acinclude.m4, configure.ac:
	use our own joe_SETPGRP macro (autoconf's is broken for *BSD)

Tue Dec 11 2001  Vitezslav Samel <samel@mail.cz>
	* configure.ac, path.c:
	include <limits.h> if available to get PATH_MAX

Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, bw.c, cmd.c, hash.c, help.c, kbd.c, macro.c, menu.c, pw.c,
	queue.c, qw.c, rc.c, scrn.c, tab.c, termcap.c, tty.c, tw.c, ufile.c,
	uformat.c, uisrch.c, umath.c, undo.c, usearch.c, utils.c, utils.h,
	va.c, vfile.c, vs.c, w.c:
	prepare memory allocation functions (change (m|re|c)alloc() and free()
	into joe_(m|re|c)alloc() and joe_free()) in the utils.c for further
	checking

Sun Dec 09 2001  Vitezslav Samel <samel@mail.cz>
	* b.c, cmd.c, dir.c, hash.c, hash.h, pw.c, pw.h, rc.c, tab.c, tab.h,
	uedit.c, uedit.h, ufile.c, uisrch.c, uisrch.h, umath.c, umath.h, undo.c,
	ushell.c, utag.c, w.c:
	change function declaration "void a(P * p)" to "void a(P *p)" (when
	using GNU indent we must use -Ttype to achieve this behaviour)

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* bw.c, scrn.c, scrn.h, uedit.c, w.c:
	change xlat macro into xlat(int *, char *) function;
	change indentation of xlat[ac] tables

Sat Dec 08 2001  Vitezslav Samel <samel@mail.cz>
	* joerc.in:
	turn off asis (setlocale(LC_CTYPE) takes care of it);