@@ -1,3 +1,7 @@
+Tue Jan  8 2002  Vitezslav Samel <samel@mail.cz>
+	* vs.c, vs.h:
+	change sELEMENT #define to typedef
+
 Mon Jan  7 2002  Vitezslav Samel <samel@mail.cz>
 	* acinclude.m4, configure.ac, tty.c, umath.c, ushell.c, utils.c,
 	utils.h:
